ajout producer_velozef.py

--- a/kappa/producer/docker-compose.yml
+++ b/kappa/producer/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     networks:
       - mynetwork
     volumes:
-      - app:/publisher/app
+      - app:/producer/app
 
 networks:
   mynetwork:
