--- a/kappa/producer/docker-compose.yml
+++ b/kappa/producer/docker-compose.yml
@@ -25,4 +25,4 @@ volumes:
     driver_opts:
       type: 'none'
       o: 'bind'
-      device: 'Users\Matheo\Documents\ARCHBIG\TP7_architecture_kappa_20250313\TP7_architecture_kappa\producer\app'
+      device: C:\Users\Matheo\Documents\ARCHBIG\Github\Architecture_Kappa\kappa\producer\app
