[Progress] improved code quality

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-kappa/apps/parquet
-kappa/apps/tmp
-kappa/client/app/velozefClient/velozefClient/__pycache__
-kappa/client/app/velozefClient/visuals/__pycache__
-kappa/client/app/velozefClient/visuals/templatetags/__pycache__
-kappa/client/app/velozefClient/db.sqlite3
+src/spark-scripts/parquet
+src/spark-scripts/tmp
+src/client/app/velozefClient/velozefClient/__pycache__
+src/client/app/velozefClient/visuals/__pycache__
+src/client/app/velozefClient/visuals/templatetags/__pycache__
+src/client/app/velozefClient/db.sqlite3
+archive
+
