--- a/src/client/docker/Dockerfile
+++ b/src/client/docker/Dockerfile
@@ -2,7 +2,7 @@
 FROM python:3.9-slim
 
 # Set the working directory inside the container
-WORKDIR /app
+WORKDIR /app/velozefClient
 
 # Install dependencies (system-level)
 RUN apt-get update && apt-get install -y \
@@ -16,8 +16,11 @@ RUN pip install --upgrade pip
 # Install Django
 RUN pip install django
 
+# Install cassandra driver for python
+RUN pip install cassandra-driver
+
 # Expose the port for Django app (default 8000)
 EXPOSE 8000
 
 # Command to keep the container running and launch bash for development
-CMD ["bash"]
+CMD ["python" , "manage.py" , "runserver" , "0.0.0.0:8000"]
