--- a/src/docker-compose-mini.yml
+++ b/src/docker-compose-mini.yml
@@ -53,61 +53,17 @@ services:
     container_name: spark-master
     networks:
       - network1
+    working_dir: /opt/spark-apps
     ports:
       - "9080:8080"
       - "7077:7077"
       - "4040:4040"
       - "7003:7000"
     volumes:
-       - ./apps:/opt/spark-apps
-       - ./data:/opt/spark-data
+       - ./spark-scripts:/opt/spark-apps
     environment:
       - SPARK_LOCAL_IP=spark-master
       - SPARK_WORKLOAD=master
-
-  spark-worker-a:
-    build: .
-    container_name: spark-worker-a
-    networks:
-      - network1
-    ports:
-      - "9081:8080"
-      - "7002:7000"
-    depends_on:
-      - spark-master
-    environment:
-      - SPARK_MASTER=spark://spark-master:7077
-      - SPARK_WORKER_CORES=1
-      - SPARK_WORKER_MEMORY=1G
-      - SPARK_DRIVER_MEMORY=1G
-      - SPARK_EXECUTOR_MEMORY=1G
-      - SPARK_WORKLOAD=worker
-      - SPARK_LOCAL_IP=spark-worker-a
-    volumes:
-       - ./apps:/opt/spark-apps
-       - ./data:/opt/spark-data
-
-  spark-worker-b:
-    build: .
-    container_name: spark-worker-b
-    networks:
-      - network1
-    ports:
-      - "9082:8080"
-      - "7001:7000"
-    depends_on:
-      - spark-master
-    environment:
-      - SPARK_MASTER=spark://spark-master:7077
-      - SPARK_WORKER_CORES=1
-      - SPARK_WORKER_MEMORY=1G
-      - SPARK_DRIVER_MEMORY=1G
-      - SPARK_EXECUTOR_MEMORY=1G
-      - SPARK_WORKLOAD=worker
-      - SPARK_LOCAL_IP=spark-worker-b
-    volumes:
-        - ./apps:/opt/spark-apps
-        - ./data:/opt/spark-data
 
   cassandra1:
     image: cassandra:latest
@@ -115,20 +71,12 @@ services:
     ports:
       - "9042:9042"
     environment:
-      - CASSANDRA_SEEDS=cassandra1,cassandra2
-      - HEAP_NEWSIZE=128M
-      - MAX_HEAP_SIZE=2048M
+      - CASSANDRA_SEEDS=cassandra1
+      - HEAP_NEWSIZE=64M
+      - MAX_HEAP_SIZE=512M
     networks:
       - network1
-  cassandra2:
-    image: cassandra:latest
-    container_name: cassandra2
-    environment:
-      - CASSANDRA_SEEDS=cassandra1,cassandra2
-      - HEAP_NEWSIZE=128M
-      - MAX_HEAP_SIZE=2048M
-    networks:
-      - network1
+
   django-env:
     build:
       context: client/docker
@@ -142,6 +90,19 @@ services:
       - network1
     stdin_open: true
     tty: true  
+
+  producer:
+    build: ./producer
+    stdin_open: true 
+    tty: true        
+    container_name: producer
+    restart: "always"
+    command: /bin/bash
+    networks:
+      - network1
+    volumes:
+      - ./producer/app:/producer/app
+
 
 networks:
   network1:
